# MADS-MachineLearning-course

./: .gitignore  .lefthook.yml  .lycheecache  Makefile  README.md  hypertune.py  pyproject.toml  requirements.txt  setup.cfg
.devcontainer/: devcontainer.json
0-baseline/: 00_environment_setup.ipynb  0_Vectorisation and Broadcasting_solutions.ipynb  1_classes_and_functions.ipynb  2_knowledge_baseline_solutions.ipynb  Makefile
0-baseline/elfarol/: hypotheses.py
docs/: conf.py  index.rst
notebooks/: CatsDogs_trax.ipynb  MNIST_trax.ipynb  neural_net_intro.ipynb  neural_net_intro_pytorch.ipynb
notebooks/0-baseline/: 00_Vectorisation and Broadcasting.ipynb  00_Vectorisation and Broadcasting_solutions.ipynb  00_environment_setup.md  01_classes_intro.ipynb  02_classes_and_functions.ipynb  02_pydantic.ipynb  03_knowledge_baseline_solutions.ipynb  03_knowledge_baseline_test.ipynb  0_Vectorisation and Broadcasting.ipynb  2_knowledge_baseline_test.ipynb  Makefile  tox.ini  use_docker.md
notebooks/07_unsupervised/: 01_autoencoders.ipynb  02_siamese.ipynb
notebooks/1_pytorch_intro/: 00_download_mnist.ipynb  01_tensors.ipynb  02_datagenerators.ipynb  03_dataloader.ipynb  04_autograd.ipynb  04_neuralnets.ipynb  05_image_classfication.ipynb  05_linearmodel.ipynb  06_exercises.ipynb  06_image_classfication.ipynb  07_excercises.ipynb  07_extra_autograd.ipynb  model.gin
notebooks/1_pytroch_intro/: 01_image_classfication.ipynb  01_tensors.ipynb  02_datagenerators.ipynb  03_dataloader.ipynb  04_autograd.ipynb  05_linearmodel.ipynb  06_convolutions.ipynb  06_find_lr.ipynb  06_image_classfication.ipynb  06_neural_net..ipynb  06_resnet.ipynb  07_excercises.ipynb  model.gin
notebooks/2_convolutions/: 01_losses.ipynb  02_convolutions.ipynb  03_find_lr.ipynb  03_mlflow.ipynb  03_mlflow.py  04_exercises.ipynb  04_exercises.md  04_find_lr.ipynb  06_resnet.ipynb  Makefile  start_server.sh  stop_server.sh
notebooks/3_recurrent_networks/: 01_windowing.ipynb  02_1d_convolutions.ipynb  03_basemodels.ipynb  04_excercise.ipynb  gestures.gin  gestures_gru.gin  model.gin
notebooks/4_tuning_networks/: 01_embeddings.ipynb  01_hypertuner.ipynb  02_hypertuner.ipynb  02_ray.ipynb  02_tune_model.ipynb  03_minimal_transfer_learning.ipynb  03_pydantic.ipynb  03_ray.ipynb  04_ray.ipynb  04_transfer_learning_with_resnet.ipynb  05_excercises.ipynb  05_hypertuning_exercise.md  05_lr_schedulers.ipynb  05_lr_schedulers_with_resnet.ipynb  05_minimal_transfer_learning.ipynb  06_excercises.ipynb  06_hypertuning_exercise.md  gestures.gin  hypertune.py  visualize.py
notebooks/5_attention/: 01_reweighing.ipynb  02_Attention_gestures.ipynb  02_transformer.ipynb  03_Attention_gestures.ipynb  03_imdb_preprocessing.ipynb  04_imdb_attention.ipynb  04_imdb_preprocessing.ipynb  04_tokenization.ipynb  05_imdb_attention.ipynb  05_imdb_preprocessing.ipynb  05_metric.ipynb  06_excercise.ipynb  06_imdb_attention.ipynb  06_metric.ipynb  07_metric.ipynb  08_excercise.ipynb  gestures.gin  imdb.gin  mnist.gin  transformers.pbm
notebooks/6_trax/: 01_trax_intro.ipynb  02_jax.ipynb  03_trax_fn.ipynb  04_training.ipynb  linearmodel_jax.ipynb  preprocessor.gin
notebooks/6_unsupervised/: .gitignore  01_autoencoder.py  01_autoencoders.ipynb  02_show_vae.py  02_siamese.ipynb  03_vae_embeddings.py  04_query_embeddings.py  Makefile  README.md  autoencoder.py  deprecated_02_siamese.ipynb  deprecated_autoencoders.ipynb  run.sh
notebooks/7_explainable/: 01_deepclassification.ipynb  01_tabular_explainer.ipynb  02_image_explainer.ipynb  XX_extra_xgboost_explainer.ipynb
notebooks/7_graphs/: 01_intro.ipynb  02_clusters_in_graphs.ipynb  03_gnn.ipynb
notebooks/7_trax/: 02_jax.ipynb  CatsDogs_trax.ipynb  (+1 more)
presentations/: federated.html
results/: metrics.csv
src/: data.py  hypertune.py  model.py  plot.py  settings.py  train.py  typehinting.py
src_rnn/: models.py  run_experiment.py
(+95 files in other folders)
