[project]
name = "mads-deeplearning"
version = "0.1.0"
description = ""

authors = [
    {name = "R.Grouls", email = "Raoul.Grouls@han.nl"},
]

requires-python = ">=3.10,<3.12"
license = {text = "MIT"}

classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Typing :: Typed",
]

dependencies = [
    "torch>=2.0.1",
    "numpy>=1.25.0",
    "loguru>=0.7.0",
    "pydantic>=1.10.9",
    "pandas>=2.0.3",
    "mads-datasets[torch]>=0.3.12",
    "matplotlib>=3.7.1",
    "seaborn>=0.12.2",
    "torchsummary>=1.5.1",
    "plotly>=5.17.0",
    "mltrainer>=0.1.127",
    "hyperopt>=0.2.7",
    "configspace>=0.7.1",
    "bayesian-optimization>=1.4.3",
    "tensorboard>=2.15.1",
    "torch-tb-profiler>=0.4.3",
]

[project.optional-dependencies]
all = [
	"jupytext>=1.16.4",
	"torch-geometric>=2.4.0",
	"shap>=0.43.0",
]
nvim = [
    "jupytext>=1.16.4",
]
graphs = [
    "torch-geometric>=2.4.0",
]
explainable = [
	"shap>=0.43.0",
]

[tool.rye]
dev-dependencies = [
    "jupyter>=1.0.0",
    "ruff>=0.4.3",
    "mypy>=1.10.0",
    "isort>=5.13.2",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

