[project]
name = "mads-deeplearning"
version = "0.2.0"
description = ""

authors = [
    {name = "R.Grouls", email = "Raoul.Grouls@han.nl"},
]

requires-python = ">=3.11,<3.12"
license = {text = "MIT"}

classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Typing :: Typed",
]

dependencies = [
    "torch>=2.0.1",
    "tokenizers>=0.21.0",
    "mads-datasets[torch]>=0.3.12",
    "mltrainer>=0.2b1",
    "loguru>=0.7.0",
    "pydantic>=1.10.9",
    "matplotlib>=3.7.1",
    "seaborn>=0.12.2",
    "plotly>=5.17.0",
    "hyperopt>=0.2.7",
    "configspace>=0.7.1",
    "bayesian-optimization==1.5.1",
    "tensorboard>=2.15.1",
    "torch-tb-profiler>=0.4.3",
    "torch-geometric>=2.6.1",
    "torchinfo>=1.8.0",
]

[project.optional-dependencies]
all = [
	"jupytext>=1.16.4",
	"torch-geometric>=2.4.0",
	"shap>=0.43.0",
]
nvim = [
    "jupytext>=1.16.4",
]
graphs = [
    "torch-geometric>=2.4.0",
]
explainable = [
	"shap>=0.43.0",
]

[dependency-groups]
dev = [
    "isort>=5.13.2",
    "jupyter>=1.1.1",
    "mypy>=1.14.1",
    "notebooktester>=0.1.1",
    "pyright>=1.1.392",
    "ruff>=0.9.1",
]

